Fix z-index issues Fix crash of header, cart and overlay z index

--- a/src/css-modules/header.module.css
+++ b/src/css-modules/header.module.css
@@ -12,7 +12,7 @@
   position: sticky;
   top: 0;
   background-color: #0F1010;
-  z-index: 5000;
+  z-index: 1000;
 }
 
 .headerTitle {
